--- a/index.html
+++ b/index.html
@@ -1,15 +1,61 @@
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Document</title>
-<link rel="stylesheet" href="./assets/css/reset.css" />
-<link rel="stylesheet" href="./assets/css/style.css" />
-</head>
-<body>
-<div class="container">
- <div class="child child1">1</div>
- <div class="child child2">2</div>
- <div class="child child3">3</div>
- <div class="child child4">4</div>
- <div class="child child5">5</div>
-</div>
-</body>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+  </head>
+  <body>
+    <article class="user-card">
+      <button class="edit-btn">
+        <i class="fa-regular fa-pen-to-square"></i>
+      </button>
+      <header>
+        <img
+          class="user-img"
+          src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTtHuWIZ2yVB-AvCR_ZoCzeoh79P-wRqMMvkt7gkcAqow&s"
+          alt="cute cat"
+        />
+        <h2>Lorem Ipsum</h2>
+      </header>
+      <p><i class="fa-solid fa-location-dot"></i> Lorem, ipsum dolor.</p>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem dicta
+        repellendus earum ab quam illum consequatur tempora blanditiis?
+      </p>
+      <section class="membership-section">
+        <div>
+          <h3>Membership</h3>
+          <p><i class="fa-solid fa-star"></i> Lorem, ipsum.</p>
+        </div>
+        <button>Lorem.</button>
+      </section>
+      <footer>
+        <h3>Lorem, ipsum.</h3>
+        <div class="social-link-list">
+          <a class="social-lnk" href="#">
+            <i class="fa-brands fa-facebook-f"></i>
+          </a>
+          <a class="social-lnk" href="#">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+          <a class="social-lnk" href="#">
+            <i class="fa-brands fa-google"></i>
+          </a>
+          <a class="social-lnk" href="#">
+            <i class="fa-brands fa-instagram"></i>
+          </a>
+        </div>
+      </footer>
+    </article>
+  </body>
 </html>
