--- a/index.html
+++ b/index.html
@@ -14,7 +14,13 @@
     />
     <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
-  <body>
-    <button>Click me</button>
-  </body>
+  <header>
+    <div class="header-content">
+      <img src="./assets/Images/logo.png" alt="" />
+      <h1>Welcome To Traversy Media</h1>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae, vel.
+      </p>
+    </div>
+  </header>
 </html>
